cabal-version: 2.4
name: chainweb-forks
version: 0.1
synopsis: Find Forks in Chainweb
description: Find the fork point between cuts of different Chainweb nodes
homepage: https://github.com/kadena-community/chainweb-forks
bug-reports: https://github.com/kadena-community/chainweb-forks/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: Lars Kuhtz <lakuhtz@gmail.com>
copyright: Copyright (c) 2019, Lars Kuhtz <lakuhtz@gmail.com>
category: Chainweb
tested-with:
      GHC==8.8.1
    , GHC==8.6.5
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/kadena-community/chainweb-forks.git

executable chainweb-forks
    hs-source-dirs: main
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    build-depends:
          base >=4.10 && <4.15
        , aeson-pretty >=0.8
        , bytestring >= 0.10
        , case-insensitive >= 1.2
        , chainweb >=1.0.3
        , configuration-tools >=0.4
        , exceptions >=0.10
        , http-client >=0.6
        , lens >=4.18
        , loglevel >=0.1
        , retry >=0.8
        , servant-client >=0.16
        , streaming >=0.2
        , text >=1.2
        , these >=1.0
        , transformers >=0.5
        , unordered-containers >=0.2
        , yet-another-logger >=0.3

